[gd_scene load_steps=6 format=3 uid="uid://cf6ltmf7hkbc6"]

[ext_resource type="Texture2D" uid="uid://cs3f2ura47btr" path="res://graphics/UI/TickBox.png" id="1_pbwn4"]
[ext_resource type="Script" path="res://scenes/chemtopia_button.gd" id="1_y1b0k"]
[ext_resource type="PackedScene" uid="uid://clu0o7tlgb6gs" path="res://scenes/chemtopia.tscn" id="2_4gri5"]
[ext_resource type="PackedScene" uid="uid://di3r0b7qgapaq" path="res://scenes/chemtopia_2.tscn" id="4_0fvp8"]
[ext_resource type="Texture2D" uid="uid://c1dwr57tol65o" path="res://graphics/UI/SaveSlotSeletcor.png" id="5_56e4o"]

[node name="Chemtopia" type="CanvasLayer"]
script = ExtResource("1_y1b0k")

[node name="Chemtopia" parent="." instance=ExtResource("2_4gri5")]
visible = false
position = Vector2(2, 2)

[node name="Chemtopia2" parent="." instance=ExtResource("4_0fvp8")]
visible = false
position = Vector2(2, 2)

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 512.0
offset_top = 3.0
offset_right = 542.0
offset_bottom = 27.0
texture_normal = ExtResource("1_pbwn4")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 521.0
offset_top = 9.0
offset_right = 535.0
offset_bottom = 40.0
scale = Vector2(0.9, 0.4)
theme_override_colors/font_color = Color(0.670588, 0.337255, 0.458824, 1)
theme_override_font_sizes/font_size = 20
text = "C"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NextPageButton" type="TextureButton" parent="."]
visible = false
offset_left = 496.0
offset_top = 263.0
offset_right = 521.0
offset_bottom = 299.0
texture_normal = ExtResource("5_56e4o")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="PreviousPageButton" type="TextureButton" parent="."]
visible = false
offset_left = 48.0
offset_top = 263.0
offset_right = 73.0
offset_bottom = 299.0
texture_normal = ExtResource("5_56e4o")
ignore_texture_size = true
stretch_mode = 0

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="PreviousPageButton" to="." method="_on_previous_page_button_pressed"]
